# extract-invoice

./: .gitignore
backend/: app.py  pyproject.toml  requirements.txt
backend/services/: invoice_service.py
backend/utils/: image_processing.py  llm_integration.py
frontend/: package-lock.json
frontend/src/: App.css  App.js  index.js
frontend/src/components/: UploadInvoice.js
