[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dai Nguyen Trong <dai.nguyentrong@nashtechglobal.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
pillow = "^11.0.0"
transformers = "^4.45.2"
torch = "^2.5.0"
torchvision = "^0.20.0"
timm = "^1.0.11"
einops = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
